--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   overflow-y: scroll;
+  min-height: -webkit-fill-available;;
 }
 
 @keyframes donut-spin {
@@ -139,7 +140,7 @@
   }
 
   .artists__container {
-    width: 50vw;
+    width: 50%;
   }
 
   .artist__image {
