--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   overflow-y: scroll;
-  min-height: -webkit-fill-available;;
+  min-height: -webkit-fill-available;
+  ;
 }
 
 @keyframes donut-spin {
@@ -36,6 +37,15 @@
   color: white;
   padding: 10px;
   margin: 20px;
+}
+
+.link__button {
+  color: rgb(179, 179, 179);
+  cursor: pointer;
+}
+
+.bio__txt {
+  padding-top: 12px;
 }
 
 .preview__container {
