--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -1,3 +1,8 @@
+a {
+  color: white;
+  text-decoration: none;
+}
+
 .list__container {
   display: flex;
   width: 100%;
@@ -105,6 +110,7 @@
   width: 15vw;
   height: 15vw;
   object-fit: cover;
+  padding-bottom: 1rem;
 }
 
 .genre {
@@ -141,6 +147,10 @@
   align-items: center;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.pb0 {
+  padding-bottom: 1rem;
 }
 
 /* Mobile Devices */
